// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar inserts extra buttons into the toolbar 1`] = `
<Navbar
  className="toolbar_l6n5rs"
  expand="md"
  light={true}
  tag="nav"
>
  <ToolbarFilterBox
    filterBoxWidth="22em"
    handleNavFilter={[MockFunction]}
  />
  <Collapse
    appear={false}
    className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
    enter={true}
    exit={true}
    in={false}
    isOpen={false}
    mountOnEnter={false}
    navbar={true}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    tag="div"
    timeout={350}
    unmountOnExit={false}
  >
    <Nav
      className="ml-auto"
      navbar={true}
      tag="ul"
      vertical={false}
    >
      <ToolbarExpandButtons
        status="passed"
      />
      <NavItem
        key="runall-button"
        tag="li"
      >
        <div
          className="buttonsBar_6zsntc"
        >
          <FontAwesomeIcon
            beat={false}
            beatFade={false}
            border={false}
            bounce={false}
            className="toolbarButton_1ueb7gu"
            fade={false}
            fixedWidth={false}
            flip={false}
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f04b",
                  "M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z",
                ],
                "iconName": "play",
                "prefix": "fas",
              }
            }
            inverse={false}
            key="toolbar-runall"
            listItem={false}
            mask={null}
            maskId={null}
            onClick={[MockFunction]}
            pull={null}
            pulse={false}
            rotation={null}
            shake={false}
            size={null}
            spin={false}
            spinPulse={false}
            spinReverse={false}
            swapOpacity={false}
            symbol={false}
            title="Run all tests"
            titleId={null}
            transform={null}
          />
        </div>
      </NavItem>
      <NavItem
        key="reload-button"
        tag="li"
      >
        <div
          className="buttonsBar_6zsntc"
        >
          <FontAwesomeIcon
            beat={false}
            beatFade={false}
            border={false}
            bounce={false}
            className="toolbarButton_1ueb7gu"
            fade={false}
            fixedWidth={false}
            flip={false}
            icon={
              Object {
                "icon": Array [
                  512,
                  512,
                  Array [],
                  "f021",
                  "M440.935 12.574l3.966 82.766C399.416 41.904 331.674 8 256 8 134.813 8 33.933 94.924 12.296 209.824 10.908 217.193 16.604 224 24.103 224h49.084c5.57 0 10.377-3.842 11.676-9.259C103.407 137.408 172.931 80 256 80c60.893 0 114.512 30.856 146.104 77.801l-101.53-4.865c-6.845-.328-12.574 5.133-12.574 11.986v47.411c0 6.627 5.373 12 12 12h200.333c6.627 0 12-5.373 12-12V12c0-6.627-5.373-12-12-12h-47.411c-6.853 0-12.315 5.729-11.987 12.574zM256 432c-60.895 0-114.517-30.858-146.109-77.805l101.868 4.871c6.845.327 12.573-5.134 12.573-11.986v-47.412c0-6.627-5.373-12-12-12H12c-6.627 0-12 5.373-12 12V500c0 6.627 5.373 12 12 12h47.385c6.863 0 12.328-5.745 11.985-12.599l-4.129-82.575C112.725 470.166 180.405 504 256 504c121.187 0 222.067-86.924 243.704-201.824 1.388-7.369-4.308-14.176-11.807-14.176h-49.084c-5.57 0-10.377 3.842-11.676 9.259C408.593 374.592 339.069 432 256 432z",
                ],
                "iconName": "sync",
                "prefix": "fas",
              }
            }
            inverse={false}
            key="toolbar-reload"
            listItem={false}
            mask={null}
            maskId={null}
            onClick={[MockFunction]}
            pull={null}
            pulse={false}
            rotation={null}
            shake={false}
            size={null}
            spin={false}
            spinPulse={false}
            spinReverse={false}
            swapOpacity={false}
            symbol={false}
            title="Reload code"
            titleId={null}
            transform={null}
          />
        </div>
      </NavItem>
      <NavItem
        key="reset-button"
        tag="li"
      >
        <div
          className="buttonsBar_6zsntc"
        >
          <FontAwesomeIcon
            beat={false}
            beatFade={false}
            border={false}
            bounce={false}
            className="toolbarButton_1ueb7gu"
            fade={false}
            fixedWidth={false}
            flip={false}
            icon={
              Object {
                "icon": Array [
                  512,
                  512,
                  Array [],
                  "f049",
                  "M0 436V76c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v151.9L235.5 71.4C256.1 54.3 288 68.6 288 96v131.9L459.5 71.4C480.1 54.3 512 68.6 512 96v320c0 27.4-31.9 41.7-52.5 24.6L288 285.3V416c0 27.4-31.9 41.7-52.5 24.6L64 285.3V436c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12z",
                ],
                "iconName": "fast-backward",
                "prefix": "fas",
              }
            }
            inverse={false}
            key="toolbar-reset"
            listItem={false}
            mask={null}
            maskId={null}
            onClick={[MockFunction]}
            pull={null}
            pulse={false}
            rotation={null}
            shake={false}
            size={null}
            spin={false}
            spinPulse={false}
            spinReverse={false}
            swapOpacity={false}
            symbol={false}
            title="Reset state"
            titleId={null}
            transform={null}
          />
        </div>
      </NavItem>
      <NavItem
        key="abort-button"
        tag="li"
      >
        <div
          className="buttonsBar_6zsntc"
        >
          <FontAwesomeIcon
            beat={false}
            beatFade={false}
            border={false}
            bounce={false}
            className="toolbarButton_1ueb7gu"
            fade={false}
            fixedWidth={false}
            flip={false}
            icon={
              Object {
                "icon": Array [
                  352,
                  512,
                  Array [],
                  "f00d",
                  "M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z",
                ],
                "iconName": "times",
                "prefix": "fas",
              }
            }
            inverse={false}
            key="toolbar-abort"
            listItem={false}
            mask={null}
            maskId={null}
            onClick={[MockFunction]}
            pull={null}
            pulse={false}
            rotation={null}
            shake={false}
            size={null}
            spin={false}
            spinPulse={false}
            spinReverse={false}
            swapOpacity={false}
            symbol={false}
            title="Abort Testplan"
            titleId={null}
            transform={null}
          />
        </div>
      </NavItem>
      <ToolbarPreferencesButton
        toolbarStyle="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
      />
      <ToolbarFilterButton
        toolbarStyle="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
      />
      <ToolbarTagsButton
        status="passed"
      />
      <ToolbarInfoButton />
      <NavItem
        tag="li"
      >
        <div
          className="buttonsBar_6zsntc"
        >
          <FontAwesomeIcon
            beat={false}
            beatFade={false}
            border={false}
            bounce={false}
            className="toolbarButton_1ueb7gu"
            fade={false}
            fixedWidth={false}
            flip={false}
            icon="print"
            inverse={false}
            key="toolbar-print"
            listItem={false}
            mask={null}
            maskId={null}
            onClick={[Function]}
            pull={null}
            pulse={false}
            rotation={null}
            shake={false}
            size={null}
            spin={false}
            spinPulse={false}
            spinReverse={false}
            swapOpacity={false}
            symbol={false}
            title="Print page"
            titleId={null}
            transform={null}
          />
        </div>
      </NavItem>
      <NavItem
        tag="li"
      >
        <a
          className="buttonsBar_6zsntc"
          href="http://testplan.readthedocs.io"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FontAwesomeIcon
            beat={false}
            beatFade={false}
            border={false}
            bounce={false}
            className="toolbarButton_1ueb7gu"
            fade={false}
            fixedWidth={false}
            flip={false}
            icon="book"
            inverse={false}
            key="toolbar-document"
            listItem={false}
            mask={null}
            maskId={null}
            pull={null}
            pulse={false}
            rotation={null}
            shake={false}
            size={null}
            spin={false}
            spinPulse={false}
            spinReverse={false}
            swapOpacity={false}
            symbol={false}
            title="Documentation"
            titleId={null}
            transform={null}
          />
        </a>
      </NavItem>
    </Nav>
  </Collapse>
</Navbar>
`;

exports[`Toolbar shallow renders the correct HTML structure for batch mode 1`] = `
<Navbar
  className="toolbar_l6n5rs"
  expand="md"
  light={true}
  tag="nav"
>
  <ToolbarFilterBox
    filterBoxWidth="22em"
    handleNavFilter={[MockFunction]}
  />
  <Collapse
    appear={false}
    className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
    enter={true}
    exit={true}
    in={false}
    isOpen={false}
    mountOnEnter={false}
    navbar={true}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    tag="div"
    timeout={350}
    unmountOnExit={false}
  >
    <Nav
      className="ml-auto"
      navbar={true}
      tag="ul"
      vertical={false}
    >
      <ToolbarExpandButtons
        status="passed"
      />
      <ToolbarPreferencesButton
        toolbarStyle="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
      />
      <ToolbarFilterButton
        toolbarStyle="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
      />
      <ToolbarTagsButton
        status="passed"
      />
      <ToolbarInfoButton />
      <NavItem
        tag="li"
      >
        <div
          className="buttonsBar_6zsntc"
        >
          <FontAwesomeIcon
            beat={false}
            beatFade={false}
            border={false}
            bounce={false}
            className="toolbarButton_1ueb7gu"
            fade={false}
            fixedWidth={false}
            flip={false}
            icon="print"
            inverse={false}
            key="toolbar-print"
            listItem={false}
            mask={null}
            maskId={null}
            onClick={[Function]}
            pull={null}
            pulse={false}
            rotation={null}
            shake={false}
            size={null}
            spin={false}
            spinPulse={false}
            spinReverse={false}
            swapOpacity={false}
            symbol={false}
            title="Print page"
            titleId={null}
            transform={null}
          />
        </div>
      </NavItem>
      <NavItem
        tag="li"
      >
        <a
          className="buttonsBar_6zsntc"
          href="http://testplan.readthedocs.io"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FontAwesomeIcon
            beat={false}
            beatFade={false}
            border={false}
            bounce={false}
            className="toolbarButton_1ueb7gu"
            fade={false}
            fixedWidth={false}
            flip={false}
            icon="book"
            inverse={false}
            key="toolbar-document"
            listItem={false}
            mask={null}
            maskId={null}
            pull={null}
            pulse={false}
            rotation={null}
            shake={false}
            size={null}
            spin={false}
            spinPulse={false}
            spinReverse={false}
            swapOpacity={false}
            symbol={false}
            title="Documentation"
            titleId={null}
            transform={null}
          />
        </a>
      </NavItem>
    </Nav>
  </Collapse>
</Navbar>
`;

exports[`Toolbar shallow renders the correct HTML structure for interactive mode 1`] = `
<Navbar
  className="toolbar_l6n5rs"
  expand="md"
  light={true}
  tag="nav"
>
  <ToolbarFilterBox
    filterBoxWidth="22em"
    handleNavFilter={[MockFunction]}
  />
  <Collapse
    appear={false}
    className="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
    enter={true}
    exit={true}
    in={false}
    isOpen={false}
    mountOnEnter={false}
    navbar={true}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    tag="div"
    timeout={350}
    unmountOnExit={false}
  >
    <Nav
      className="ml-auto"
      navbar={true}
      tag="ul"
      vertical={false}
    >
      <ToolbarExpandButtons
        status="passed"
      />
      <ToolbarPreferencesButton
        toolbarStyle="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
      />
      <ToolbarFilterButton
        toolbarStyle="toolbar_l6n5rs-o_O-toolbarPassed_1bjpgj2"
      />
      <ToolbarTagsButton
        status="passed"
      />
      <ToolbarInfoButton />
      <NavItem
        tag="li"
      >
        <div
          className="buttonsBar_6zsntc"
        >
          <FontAwesomeIcon
            beat={false}
            beatFade={false}
            border={false}
            bounce={false}
            className="toolbarButton_1ueb7gu"
            fade={false}
            fixedWidth={false}
            flip={false}
            icon="print"
            inverse={false}
            key="toolbar-print"
            listItem={false}
            mask={null}
            maskId={null}
            onClick={[Function]}
            pull={null}
            pulse={false}
            rotation={null}
            shake={false}
            size={null}
            spin={false}
            spinPulse={false}
            spinReverse={false}
            swapOpacity={false}
            symbol={false}
            title="Print page"
            titleId={null}
            transform={null}
          />
        </div>
      </NavItem>
      <NavItem
        tag="li"
      >
        <a
          className="buttonsBar_6zsntc"
          href="http://testplan.readthedocs.io"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FontAwesomeIcon
            beat={false}
            beatFade={false}
            border={false}
            bounce={false}
            className="toolbarButton_1ueb7gu"
            fade={false}
            fixedWidth={false}
            flip={false}
            icon="book"
            inverse={false}
            key="toolbar-document"
            listItem={false}
            mask={null}
            maskId={null}
            pull={null}
            pulse={false}
            rotation={null}
            shake={false}
            size={null}
            spin={false}
            spinPulse={false}
            spinReverse={false}
            swapOpacity={false}
            symbol={false}
            title="Documentation"
            titleId={null}
            transform={null}
          />
        </a>
      </NavItem>
    </Nav>
  </Collapse>
</Navbar>
`;
